# email_ai_agent

./: .env.examples  README.md  pyproject.toml  requirements.txt  upload.py
config/: config.yml
email_collector/: collect_emails.py
embedding/: embeddings.py
rag/: emailrag.py  embeddings.py  rag.py  rag_no_rewrite.py
utils/: config_loader.py
